# LakeProject

./: CMakeLists.txt
include/: Animation.hpp  Bitmask.hpp  C_Animation.hpp  C_Drawable.hpp  C_KeyboardMovement.hpp  C_Sprite.hpp  C_Transform.hpp  Component.hpp  Game.hpp  Input.hpp  Object.hpp  ObjectCollection.hpp  ResourceAllocator.hpp  S_Drawable.hpp  Scene.hpp  SceneGame.hpp  Tile.h  TileMapParser.hpp  Utilities.h  Window.hpp  WorkingDirectory.hpp
src/: Animation.cpp  Bitmask.cpp  C_Animation.cpp  C_Drawable.cpp  C_KeyboardMovement.cpp  C_Sprite.cpp  C_Transform.cpp  Game.cpp  Input.cpp  Main.cpp  Object.cpp  ObjectCollection.cpp  S_Drawable.cpp  SceneGame.cpp  SceneSplashScreen.cpp  SceneStateMachine.cpp  TileMapParser.cpp  Window.cpp  WorkingDirectory.cpp
